# centroidal-voronoi-stippling

./: CMakeLists.txt  Mesh.hpp  README.md  ScopedTimer.hpp  Shader.hpp  Texture.hpp  Voronoi.hpp  stippling.cc
shaders/: relaxer.frag.glsl  relaxer.vert.glsl  stipple.frag.glsl  stipple.vert.glsl  voronoi.frag.glsl  voronoi.vert.glsl
