cmake_minimum_required(VERSION 3.10)
project(Stippling)
cmake_policy(SET CMP0072  OLD)
find_package(OpenCV)
find_package(glm)
find_package(GLEW)
find_package(SDL2)
find_package(OpenGL)
find_package(JPEG)
find_package(PNG)
find_package(OpenMP)
add_executable(stippling stippling.cc)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

target_compile_features(stippling PRIVATE cxx_std_20)
include_directories(${OpenCV_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS})
target_link_libraries(stippling ${OpenMP_CXX_FLAGS} ${PNG_LIBRARIES} ${JPEG_LIBRARIES} ${OpenCV_LIBS} ${SDL2_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES})
